SERVER-79787 Set the number of inserted documents correctly when write errors occur during time-series ordered inserts (#18506)

GitOrigin-RevId: 78f569b565d59144da819937a2fc7a53dffdf69a